--- a/conf/resources/reportes/recupero/recibo.html
+++ b/conf/resources/reportes/recupero/recibo.html
@@ -165,7 +165,7 @@
              <span style="font-size: 50px">X</span>
          </div>
          <div class="border_div" style="font-weight:bold;padding-left:25px;padding-top:5px;padding-bottom:5px">
-             Período Facturado&nbsp;&nbsp;&nbsp; Desde: <span class="fecha_desde"></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hasta: <span class="fecha_hasta"></span>
+             IMPORTE TOTAL: <span class="monto_letras"></span>
          </div>
          <div class="border_div info_factura">
              <table style="width: 100%">
@@ -229,8 +229,8 @@
         <thead style="background-color: #BDBDBD;">
             <tr>
             	<th style="border: 1px solid;width:350px;">Factura</th>
-                <th style="border: 1px solid;">Base Factura</th>
-                <th style="border: 1px solid;">Monto</th>
+                <th style="border: 1px solid;">Factura Total</th>
+                <th style="border: 1px solid;">Abonado</th>
                 <th style="border: 1px solid;">Saldo</th>
 
             </tr>
@@ -274,7 +274,7 @@
              <span style="font-size: 50px">X</span>
          </div>
          <div class="border_div" style="font-weight:bold;padding-left:25px;padding-top:5px;padding-bottom:5px">
-             Período Facturado&nbsp;&nbsp;&nbsp; Desde: <span class="fecha_desde"></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hasta: <span class="fecha_hasta"></span>
+             IMPORTE TOTAL: <span class="monto_letras"></span>
          </div>
          <div class="border_div info_factura">
              <table style="width: 100%">
@@ -310,8 +310,8 @@
 	            <tr>
 	            <th style="border: 1px solid;width:350px;">Producto / Servicio</th>
 	                <th style="border: 1px solid;width:350px;">Factura</th>
-	                <th style="border: 1px solid;">Base Factura</th>
-	                <th style="border: 1px solid;">Monto</th>
+	                <th style="border: 1px solid;">Factura Total</th>
+	                <th style="border: 1px solid;">Abonado</th>
 	                <th style="border: 1px solid;">Saldo</th>
 	            </tr>
 	        </thead>
@@ -354,7 +354,7 @@
              <span style="font-size: 50px">X</span>
          </div>
          <div class="border_div" style="font-weight:bold;padding-left:25px;padding-top:5px;padding-bottom:5px">
-             Período Facturado&nbsp;&nbsp;&nbsp; Desde: <span class="fecha_desde"></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hasta: <span class="fecha_hasta"></span>
+             IMPORTE TOTAL: <span class="monto_letras"></span>
          </div>
          <div class="border_div info_factura">
              <table style="width: 100%">
@@ -390,8 +390,8 @@
 	            <tr>
 	            <th style="border: 1px solid;width:350px;">Producto / Servicio</th>
 	                <th style="border: 1px solid;width:350px;">Factura</th>
-	                <th style="border: 1px solid;width:20px;">Base Factura</th>
-	                <th style="border: 1px solid;">Monto</th>
+	                <th style="border: 1px solid;">Factura Total</th>
+	                <th style="border: 1px solid;">Abonado</th>
 	                <th style="border: 1px solid;">Saldo</th>
 	            </tr>
 	        </thead>
