--- a/conf/resources/reportes/recupero/recibo.html
+++ b/conf/resources/reportes/recupero/recibo.html
@@ -185,7 +185,7 @@
 
 
                          <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
-                         <b>Condición de venta:</b> Contado<br>
+                         <b>Condición de venta:</b> Cuenta Corriente<br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
 
@@ -294,7 +294,7 @@
 
 
                          <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
-                         <b>Condición de venta:</b> Contado<br>
+                         <b>Condición de venta:</b> Cuenta Corriente<br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
 
@@ -375,7 +375,7 @@
 
 
                          <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
-                         <b>Condición de venta:</b> Contado<br>
+                         <b>Condición de venta:</b> Cuenta Corriente<br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
 
