--- a/conf/resources/reportes/recupero/factura.html
+++ b/conf/resources/reportes/recupero/factura.html
@@ -185,7 +185,7 @@
 
 
                          <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
-                         <b>Condición de venta:</b> Contado<br>
+                         <b>Condición de venta:</b> <span class="tipo_pago"></span><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
 
@@ -295,7 +295,7 @@
 
 
                          <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
-                         <b>Condición de venta:</b> Contado<br>
+                         <b>Condición de venta:</b> <span class="tipo_pago"></span><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
 
@@ -376,7 +376,7 @@
 
 
                          <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
-                         <b>Condición de venta:</b> Contado<br>
+                         <b>Condición de venta:</b> <span class="tipo_pago"></span><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
 
