--- a/conf/resources/reportes/recupero/recibo.html
+++ b/conf/resources/reportes/recupero/recibo.html
@@ -228,8 +228,10 @@
     <table class="table_prestaciones" style="width: 100%;text-align: center;padding-bottom:250px;;" cellspacing="2" cellpadding="2">
         <thead style="background-color: #BDBDBD;">
             <tr>
-            	<th style="border: 1px solid;width:350px;">Factura</th>
-                <th style="border: 1px solid;">Factura Total</th>
+            	<th style="border: 1px solid;width:200px;">Factura</th>
+                <th style="border: 1px solid;">Factura Base</th>
+                <th style="border: 1px solid;">NC</th>
+                <th style="border: 1px solid;">ND</th>
                 <th style="border: 1px solid;">Abonado</th>
                 <th style="border: 1px solid;">Saldo</th>
 
@@ -308,8 +310,10 @@
     <table class="table_prestaciones" style="width: 100%;text-align: center;padding-bottom:250px;;" cellspacing="2" cellpadding="2">
         	<thead style="background-color: #BDBDBD;">
 	            <tr>
-	            <th style="border: 1px solid;width:350px;">Factura</th>
-                <th style="border: 1px solid;">Factura Total</th>
+	            <th style="border: 1px solid;width:200px;">Factura</th>
+                <th style="border: 1px solid;">Factura Base</th>
+                <th style="border: 1px solid;">NC</th>
+                <th style="border: 1px solid;">ND</th>
                 <th style="border: 1px solid;">Abonado</th>
                 <th style="border: 1px solid;">Saldo</th>
 	            </tr>
@@ -389,8 +393,10 @@
    	 <table class="table_prestaciones" style="width: 100%;text-align: center;padding-bottom:250px;;" cellspacing="2" cellpadding="2">
 	        <thead style="background-color: #BDBDBD;">
 	            <tr>
-	            <th style="border: 1px solid;width:350px;">Factura</th>
-                <th style="border: 1px solid;">Factura Total</th>
+	            <th style="border: 1px solid;width:200px;">Factura</th>
+                <th style="border: 1px solid;">Factura Base</th>
+                <th style="border: 1px solid;">NC</th>
+                <th style="border: 1px solid;">ND</th>
                 <th style="border: 1px solid;">Abonado</th>
                 <th style="border: 1px solid;">Saldo</th>
 	            </tr>
