--- a/conf/resources/reportes/recupero/recibo.html
+++ b/conf/resources/reportes/recupero/recibo.html
@@ -100,7 +100,7 @@
                         .div_letra2{
                         border: 2px solid;
                         width: 60px;
-                        height: 60px;
+                        height: 75px;
                         text-align: center;
                         font-weight: bold;
                         position:absolute;
@@ -111,7 +111,7 @@
                         .div_letra3{
                         border: 2px solid;
                         width: 60px;
-                        height: 60px;
+                        height: 75px;
                         text-align: center;
                         font-weight: bold;
                         position:absolute;
@@ -162,9 +162,11 @@
 
 
          <div class="div_letra2">
-             <span style="font-size: 50px">X</span>
+             <span style="font-size: 40px">X</span></br>
+             <span style="font-size:10px">Duplicado</span>
          </div>
-         <div class="border_div" style="font-weight:bold;padding-left:25px;padding-top:5px;padding-bottom:5px">
+         <div class="border_div" style="font-weight:bold;padding-left:10px;padding-top:5px;padding-bottom:5px">
+             Fecha Acreditacion: <span class="fecha_transferencia"></span> </br>
              IMPORTE TOTAL: <span class="monto_letras"></span>
          </div>
          <div class="border_div info_factura">
@@ -273,9 +275,11 @@
 
 
          <div class="div_letra3">
-             <span style="font-size: 50px">X</span>
+             <span style="font-size: 40px">X</span></br>
+             <span style="font-size:10px">Triplicado</span>
          </div>
-         <div class="border_div" style="font-weight:bold;padding-left:25px;padding-top:5px;padding-bottom:5px">
+		<div class="border_div" style="font-weight:bold;padding-left:10px;padding-top:5px;padding-bottom:5px">
+             Fecha Acreditacion: <span class="fecha_transferencia"></span> </br>
              IMPORTE TOTAL: <span class="monto_letras"></span>
          </div>
          <div class="border_div info_factura">
@@ -358,8 +362,8 @@
          <div class="div_letra">
              <span style="font-size: 50px">X</span>
          </div>
-         <div class="border_div" style="font-weight:bold;padding-left:25px;padding-top:5px;padding-bottom:5px">
-             IMPORTE TOTAL: <span class="monto_letras"></span>
+         <div class="border_div" style="font-weight:bold;padding-left:10px;padding-top:5px;padding-bottom:5px">
+             Fecha Acreditacion: <span class="fecha_transferencia"></span>  </br> IMPORTE TOTAL: <span class="monto_letras"></span>
          </div>
          <div class="border_div info_factura">
              <table style="width: 100%">
