--- a/conf/resources/reportes/recupero/nd.html
+++ b/conf/resources/reportes/recupero/nd.html
@@ -182,14 +182,11 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
-
-
-                         <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
-                         <b>Condición de venta:</b> Contado<br>
+						 <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+                         <b>Condición de venta:</b> Contado - <b>FC:<span class="fc"></span></b><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
-
-                         <b>Domicilio:</b><span class="direccion"></span><br>
+						<b>Domicilio:</b><span class="direccion"></span><br>
                      </td>
                  </tr>
              </tbody></table>
@@ -292,14 +289,11 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
-
-
-                         <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
-                         <b>Condición de venta:</b> Contado<br>
+						 <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+                         <b>Condición de venta:</b> Contado - <b>FC:<span class="fc"></span></b><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
-
-                         <b>Domicilio:</b><span class="direccion"></span><br>
+						<b>Domicilio:</b><span class="direccion"></span><br>
                      </td>
                  </tr>
              </tbody></table>
@@ -372,15 +366,12 @@
              </tbody></table>
              <table style="width: 100%">
                  <tbody><tr>
-                     <td style="width: 50%;;padding-left:25px;">
-
-
-                         <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
-                         <b>Condición de venta:</b> Contado<br>
+                     <<td style="width: 50%;;padding-left:25px;">
+						 <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+                         <b>Condición de venta:</b> Contado - <b>FC:<span class="fc"></span></b><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
-
-                         <b>Domicilio:</b><span class="direccion"></span><br>
+						<b>Domicilio:</b><span class="direccion"></span><br>
                      </td>
                  </tr>
              </tbody></table>
