--- a/conf/resources/reportes/recupero/nc.html
+++ b/conf/resources/reportes/recupero/nc.html
@@ -142,8 +142,7 @@
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
                          <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
-
-                         <b>Condición frente al IVA:</b> IVA EXENTO<br>
+						 <b>Condición frente al IVA:</b> IVA EXENTO<br>
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
@@ -182,14 +181,11 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
-
-
-                         <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
-                         <b>Condición de venta:</b> Contado<br>
+						 <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+                         <b>Condición de venta:</b> Contado - <b>FC:<span class="fc"></span></b><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
-
-                         <b>Domicilio:</b><span class="direccion"></span><br>
+						<b>Domicilio:</b><span class="direccion"></span><br>
                      </td>
                  </tr>
              </tbody></table>
@@ -292,14 +288,11 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
-
-
-                         <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
-                         <b>Condición de venta:</b> Contado<br>
+						 <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+                         <b>Condición de venta:</b> Contado - <b>FC:<span class="fc"></span></b><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
-
-                         <b>Domicilio:</b><span class="direccion"></span><br>
+						<b>Domicilio:</b><span class="direccion"></span><br>
                      </td>
                  </tr>
              </tbody></table>
@@ -373,14 +366,11 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
-
-
-                         <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
-                         <b>Condición de venta:</b> Contado<br>
+						<b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+                         <b>Condición de venta:</b> Contado - <b>FC:<span class="fc"></span></b><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
-
-                         <b>Domicilio:</b><span class="direccion"></span><br>
+							<b>Domicilio:</b><span class="direccion"></span><br>
                      </td>
                  </tr>
              </tbody></table>
