--- a/conf/resources/reportes/recupero/factura.html
+++ b/conf/resources/reportes/recupero/factura.html
@@ -89,7 +89,7 @@
                         .div_letra{
                         border: 2px solid;
                         width: 60px;
-                        height: 60px;
+                        height: 80px;
                         text-align: center;
                         font-weight: bold;
                         position:absolute;
@@ -100,7 +100,7 @@
                         .div_letra2{
                         border: 2px solid;
                         width: 60px;
-                        height: 60px;
+                        height: 80px;
                         text-align: center;
                         font-weight: bold;
                         position:absolute;
@@ -111,7 +111,7 @@
                         .div_letra3{
                         border: 2px solid;
                         width: 60px;
-                        height: 60px;
+                        height: 80px;
                         text-align: center;
                         font-weight: bold;
                         position:absolute;
@@ -162,6 +162,7 @@
 
          <div class="div_letra2">
              <span style="font-size: 50px">C</span>
+             <span style="font-size: 10px">Duplicado</span>
          </div>
          <div class="border_div" style="font-weight:bold;padding-left:25px;padding-top:5px;padding-bottom:5px">
              Período Facturado&nbsp;&nbsp;&nbsp; Desde: <span class="fecha_desde"></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hasta: <span class="fecha_hasta"></span>
@@ -271,6 +272,7 @@
 
          <div class="div_letra3">
              <span style="font-size: 50px">C</span>
+             <span style="font-size: 10px">Triplicado</span>
          </div>
          <div class="border_div" style="font-weight:bold;padding-left:25px;padding-top:5px;padding-bottom:5px">
              Período Facturado&nbsp;&nbsp;&nbsp; Desde: <span class="fecha_desde"></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hasta: <span class="fecha_hasta"></span>
@@ -352,6 +354,7 @@
 
          <div class="div_letra">
              <span style="font-size: 50px">C</span>
+             <span style="font-size: 10px">Original</span>
          </div>
          <div class="border_div" style="font-weight:bold;padding-left:25px;padding-top:5px;padding-bottom:5px">
              Período Facturado&nbsp;&nbsp;&nbsp; Desde: <span class="fecha_desde"></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hasta: <span class="fecha_hasta"></span>
