--- a/conf/resources/reportes/recupero/recibo.html
+++ b/conf/resources/reportes/recupero/recibo.html
@@ -197,7 +197,7 @@
                      <td style="width: 50%;;padding-left:25px;">
 
 
-                         <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+                         <b>Condición frente al IVA:</b> <span class="ivaa"></span><br>
                          <b>Condición de venta:</b> Cuenta Corriente<br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
@@ -290,7 +290,7 @@
                      <td style="width: 50%;;padding-left:25px;">
 
 
-                         <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+                         <b>Condición frente al IVA:</b> <span class="ivaa"></span><br>
                          <b>Condición de venta:</b> Cuenta Corriente<br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
@@ -373,7 +373,7 @@
                      <td style="width: 50%;;padding-left:25px;">
 
 
-                         <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+                         <b>Condición frente al IVA:</b> <span class="ivaa"></span><br>
                          <b>Condición de venta:</b> Cuenta Corriente<br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
