--- a/conf/resources/reportes/recupero/factura.html
+++ b/conf/resources/reportes/recupero/factura.html
@@ -184,7 +184,7 @@
                      <td style="width: 50%;;padding-left:25px;">
 
 
-                         <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+                         <b>Condición frente al IVA:</b> <span class="ivaa"></span><br>
                          <b>Condición de venta:</b> <span class="tipo_pago"></span><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
@@ -294,7 +294,7 @@
                      <td style="width: 50%;;padding-left:25px;">
 
 
-                         <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+                         <b>Condición frente al IVA:</b> <span class="ivaa"></span><br>
                          <b>Condición de venta:</b> <span class="tipo_pago"></span><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
@@ -376,7 +376,7 @@
                      <td style="width: 50%;;padding-left:25px;">
 
 
-                         <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+                         <b>Condición frente al IVA:</b> <span class="ivaa"></span><br>
                          <b>Condición de venta:</b> <span class="tipo_pago"></span><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
