--- a/conf/resources/reportes/recupero/nc.html
+++ b/conf/resources/reportes/recupero/nc.html
@@ -182,7 +182,7 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
-						 <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+						 <b>Condición frente al IVA:</b> <span class="ivaa"></span><br>
                          <b>Condición de venta:</b> Contado - <b>FC:<span class="fc"></span></b><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
@@ -289,7 +289,7 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
-						 <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+						 <b>Condición frente al IVA:</b> <span class="ivaa"></span><br>
                          <b>Condición de venta:</b> Contado - <b>FC:<span class="fc"></span></b><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
@@ -368,7 +368,7 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
-						<b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+						<b>Condición frente al IVA:</b> <span class="ivaa"></span><br>
                          <b>Condición de venta:</b> Contado - <b>FC:<span class="fc"></span></b><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
