--- a/conf/resources/reportes/recupero/nd.html
+++ b/conf/resources/reportes/recupero/nd.html
@@ -183,7 +183,7 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
-						 <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+						 <b>Condición frente al IVA:</b> <span class="ivaa"></span><br>
                          <b>Condición de venta:</b> Contado - <b>FC:<span class="fc"></span></b><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
@@ -290,7 +290,7 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
-						 <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+						 <b>Condición frente al IVA:</b> <span class="ivaa"></span><br>
                          <b>Condición de venta:</b> Contado - <b>FC:<span class="fc"></span></b><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
@@ -369,7 +369,7 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <<td style="width: 50%;;padding-left:25px;">
-						 <b>Condición frente al IVA:</b> IVA Responsable Inscripto<br>
+						 <b>Condición frente al IVA:</b> <span class="ivaa"></span><br>
                          <b>Condición de venta:</b> Contado - <b>FC:<span class="fc"></span></b><br>
                      </td>
                      <td style="width: 50%;;padding-left:25px;">
