--- a/conf/resources/reportes/recupero/recibo3.html
+++ b/conf/resources/reportes/recupero/recibo3.html
@@ -261,10 +261,11 @@
        </thead>
       	<tbody class="lineas1"></tbody>
 </table>
-<table class="" style="width: 100%;text-align: center;" cellspacing="2" cellpadding="2">
+<table class="" style="width: 100%;text-align: center;border:1px solid;" cellspacing="2" cellpadding="2">
 
-        <tr style="">
-        	<td style="border: 1px solid;">Pág. 1/2</td>
+        <tr>
+        	<td style="" width="50%">Pág. 1/2</td>
+        	<td width="50%" style="text-align: right: ;"><b>SubTotal:</b> <span class="total1"></span></td>
 		</tr>
 
 </table>
@@ -347,10 +348,11 @@
        </thead>
       	<tbody class="lineas2"></tbody>
 </table>
-<table class="" style="width: 100%;text-align: center;" cellspacing="2" cellpadding="2">
+<table class="" style="width: 100%;text-align: center;border:1px solid;" cellspacing="2" cellpadding="2">
 
         <tr style="">
-        	<td style="border: 1px solid;">Pág. 2/2</td>
+        	<td style="" width="50%">Pág. 2/2</td>
+        	<td width="50%" style="text-align: right: ;"><b>SubTotal:</b> <span class="total2"></span></td>
 		</tr>
 
 </table>
@@ -441,10 +443,11 @@
         <tbody class="lineas1"></tbody>
 
 	</table>
-<table class="" style="width: 100%;text-align: center;" cellspacing="2" cellpadding="2">
+<table class="" style="width: 100%;text-align: center;border:1px solid;" cellspacing="2" cellpadding="2">
 
-        <tr style="">
-        	<td style="border: 1px solid;">Pág. 1/2</td>
+        <tr>
+        	<td style="" width="50%">Pág. 1/2</td>
+        	<td width="50%" style="text-align: right: ;"><b>SubTotal:</b> <span class="total1"></span></td>
 		</tr>
 
 </table>
@@ -535,10 +538,11 @@
         <tbody class="lineas2"></tbody>
 
 	</table>
-<table class="" style="width: 100%;text-align: center;" cellspacing="2" cellpadding="2">
+<table class="" style="width: 100%;text-align: center;border:1px solid;" cellspacing="2" cellpadding="2">
 
-        <tr style="">
-        	<td style="border: 1px solid;">Pág. 2/2</td>
+        <tr>
+        	<td style="" width="50%">Pág. 2/2</td>
+        	<td width="50%" style="text-align: right: ;"><b>SubTotal:</b> <span class="total2"></span></td>
 		</tr>
 
 </table>
@@ -632,10 +636,11 @@
         	</thead>
         	<tbody class="lineas1"></tbody>
 		</table>
-<table class="" style="width: 100%;text-align: center;" cellspacing="2" cellpadding="2">
+<table class="" style="width: 100%;text-align: center;border:1px solid;" cellspacing="2" cellpadding="2">
 
-        <tr style="">
-        	<td style="border: 1px solid;">Pág. 1/2</td>
+       	<tr>
+        	<td style="" width="50%">Pág. 1/2</td>
+        	<td width="50%" style="text-align: right: ;"><b>SubTotal:</b> <span class="total1"></span></td>
 		</tr>
 
 </table>
@@ -728,10 +733,12 @@
         	</thead>
         	<tbody class="lineas2"></tbody>
 		</table>
-<table class="" style="width: 100%;text-align: center;" cellspacing="2" cellpadding="2">
+<table class="" style="width: 100%;text-align: center;border:1px solid;" cellspacing="2" cellpadding="2">
 
-        <tr style="">
-        	<td style="border: 1px solid;">Pág. 2/2</td>
+
+		<tr>
+        	<td style="" width="50%">Pág. 2/2</td>
+        	<td width="50%" style="text-align: right: ;"><b>SubTotal:</b> <span class="total2"></span></td>
 		</tr>
 
 </table>
