--- a/conf/resources/reportes/recupero/recibo2.html
+++ b/conf/resources/reportes/recupero/recibo2.html
@@ -422,13 +422,14 @@
 
 		 <div class="div_letra">
              <span style="font-size: 30px">X</span>
+             <span style="font-size:10px">Original</span>
          </div>
          <div class="div_letra2">
-             <span style="font-size: 30px">X</span></br>
+             <span style="font-size: 30px">X</span>
              <span style="font-size:10px">Duplicado</span>
          </div>
          <div class="div_letra3">
-             <span style="font-size: 30px">X</span></br>
+             <span style="font-size: 30px">X</span>
              <span style="font-size:10px">Triplicado</span>
          </div>
 
